<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#414141"
    app:cardCornerRadius="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_8sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/share_name"
                android:textColor="#FF5454"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:fontFamily="monospace"
                android:text="@string/company_name"
                android:textColor="#07E2FF"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/currentPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/_200_00"
                android:textColor="#07E2FF"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/_52w"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:layout_marginBottom="@dimen/_5sdp">

            <TextView
                android:id="@+id/high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/_52w_high"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/_52wHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/high"
                android:text="@string/value"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_toStartOf="@+id/_52wLow"
                android:text="@string/_52w_low"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/_52wLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/value"
                android:textSize="@dimen/_13ssp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/openClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/_52w"
            android:layout_marginBottom="@dimen/_8sdp">

            <TextView
                android:id="@+id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/open_today"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/openPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/open"
                android:text="@string/value"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_toStartOf="@+id/closePrice"
                android:text="@string/close_today"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/closePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/value"
                android:textSize="@dimen/_13ssp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/volume"
            android:layout_below="@+id/openClose"
            android:text="@string/volume"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/_5sdp"/>
        <TextView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/openClose"
            android:layout_alignParentEnd="true"
            android:text="@string/value"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>